@@ -3,6 +3,8 @@ UBMoD - ChangeLog
 ===============================================================================
 
 -
+    - Changed group details page, panel now expands when a group detail
+      tab is opened
     - Changed stacked area charts to display fewer labels on the x-axis
       for long time periods
 
